force-app/main/default/objects/Support_Desk__c/Support_Desk__c.object-meta.xml
<CustomObject>
    <description>This object will allow users to submit an ownership request to the system administrators.</description>
    <label>Need Help</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Need Help</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>