force-app/main/default/objects/Support_Desk__c/fields/Account_Name3__c.field-meta.xml
<CustomField>
    <fullName>Account_Name3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Customer Name3</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Need Help (Account Name3)</relationshipLabel>
    <relationshipName>Need_Help2</relationshipName>
    <type>Lookup</type>
</CustomField>