force-app/main/default/objects/Support_Desk__c/fields/Account_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Customer Name 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Need Help (Account Name 2)</relationshipLabel>
    <relationshipName>Need_Help1</relationshipName>
    <type>Lookup</type>
</CustomField>