force-app/main/default/objects/Support_Desk__c/fields/Account_Name_4__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Customer Name 4</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Need Help (Account Name 4)</relationshipLabel>
    <relationshipName>Need_Help3</relationshipName>
    <type>Lookup</type>
</CustomField>