force-app/main/default/objects/Support_Desk__c/fields/Assign_To__c.field-meta.xml
<CustomField>
    <fullName>Assign_To__c</fullName>
    <label>Assign To</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Request_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Compensation Matrix Administration</fullName>
            </value>
            <value>
                <fullName>Darrin Robinson</fullName>
            </value>
            <value>
                <fullName>Global Sales Operations</fullName>
            </value>
            <value>
                <fullName>Global SalesReportingTeam</fullName>
            </value>
            <value>
                <fullName>Interact Operations</fullName>
            </value>
            <value>
                <fullName>Linda Sherman</fullName>
            </value>
            <value>
                <fullName>NSC Administration</fullName>
            </value>
            <value>
                <fullName>Tera Ricker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>