force-app/main/default/objects/Support_Desk__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Need Help</relationshipLabel>
    <relationshipName>Need_Help</relationshipName>
    <type>Lookup</type>
</CustomField>