force-app/main/default/objects/Support_Desk__c/fields/Date_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Closed__c</fullName>
    <label>Date Closed</label>
    <type>Date</type>
</CustomField>