force-app/main/default/objects/Support_Desk__c/fields/Date_Requested__c.field-meta.xml
<CustomField>
    <fullName>Date_Requested__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Requested</label>
    <type>Date</type>
</CustomField>