force-app/main/default/objects/Support_Desk__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Hospitality/Travel</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>TNT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>