force-app/main/default/objects/Support_Desk__c/fields/Master_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Master_Customer_Number__c</fullName>
    <formula>Master_Customer_Name__r.Master_Customer_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master Customer Number</label>
    <type>Text</type>
</CustomField>