force-app/main/default/objects/Support_Desk__c/fields/Request_Category__c.field-meta.xml
<CustomField>
    <fullName>Request_Category__c</fullName>
    <label>Request Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SalesCentral (NSC)</fullName>
                <label>Salesforce</label>
            </value>
            <value>
                <fullName>Account Assignment</fullName>
            </value>
            <value>
                <fullName>Dashboard/Reporting</fullName>
            </value>
            <value>
                <fullName>EBC Calendar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>