force-app/main/default/objects/Support_Desk__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Channel Sales</fullName>
            </value>
            <value>
                <fullName>Global Sales</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>