force-app/main/default/objects/Support_Desk__c/recordTypes/Need_Help_For_Account.recordType-meta.xml
<RecordType>
    <fullName>Need_Help_For_Account</fullName>
    <active>true</active>
    <description>This option is for changes to Account(s)</description>
    <label>Need Help For Account</label>
</RecordType>