force-app/main/default/objects/Support_Desk__c/recordTypes/Need_help_for_Contact.recordType-meta.xml
<RecordType>
    <fullName>Need_help_for_Contact</fullName>
    <active>true</active>
    <description>This option is for changes to a Contact</description>
    <label>Need Help For Contact</label>
</RecordType>