force-app/main/default/objects/Support_Desk__c/recordTypes/Need_Help_For_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Need_Help_For_Opportunity</fullName>
    <active>true</active>
    <description>This option is for changes to an Opportunity</description>
    <label>Need Help For Opportunity</label>
</RecordType>