force-app/main/default/objects/Support_Desk__c/validationRules/Date_Closed_not_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Closed_not_null</fullName>
    <active>true</active>
    <description>Date Closed cannot be black if Request Status is Completed.</description>
    <errorConditionFormula>AND(
 ISPICKVAL(Request_Status__c, &apos;Completed&apos;), 
 ISNULL( Date_Closed__c)
 )</errorConditionFormula>
    <errorDisplayField>Date_Closed__c</errorDisplayField>
    <errorMessage>Date Closed cannot be blank if Request Status is Completed</errorMessage>
</ValidationRule>