force-app/main/default/objects/Support_Desk__c/listViews/Global_Sales.listView-meta.xml
<ListView>
    <fullName>Global_Sales</fullName>
    <booleanFilter>(1 OR 3)  AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Date_Requested__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Assign_To__c</columns>
    <columns>Description_of_Change__c</columns>
    <columns>Request_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assign_To__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Request_Status__c</field>
        <operation>equals</operation>
        <value>New,In Process,On Hold</value>
    </filters>
    <filters>
        <field>Assign_To__c</field>
        <operation>equals</operation>
        <value>NSC Administration</value>
    </filters>
    <label>Global Sales</label>
    <sharedTo></sharedTo>
</ListView>