force-app/main/default/objects/Support_Desk__c/listViews/IPS_Global.listView-meta.xml
<ListView>
    <fullName>IPS_Global</fullName>
    <columns>NAME</columns>
    <columns>Assign_To__c</columns>
    <columns>Date_Requested__c</columns>
    <columns>Request_Status__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assign_To__c</field>
        <operation>equals</operation>
        <value>IPS Customer Care,Mari Miller</value>
    </filters>
    <filters>
        <field>Request_Status__c</field>
        <operation>equals</operation>
        <value>New,In Process,On Hold</value>
    </filters>
    <label>IPS Global</label>
    <sharedTo></sharedTo>
</ListView>